--- a/web/index.html
+++ b/web/index.html
@@ -14,22 +14,22 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="$FLUTTER_BASE_HREF">
+  <base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="Porfolio de Pablo Perea Campos">
+  <meta name="description" content="Porfolio de Pablo Perea Campos - Desarrollador">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="portfolio">
+  <meta name="apple-mobile-web-app-title" content="Pablo Perea Campos - Porfolio">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.ico"/>
 
-  <title>portfolio</title>
+  <title>Pablo Perea Campos - Porfolio</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
