--- a/web/index.html
+++ b/web/index.html
@@ -18,18 +18,24 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="Porfolio de Pablo Perea Campos - Desarrollador">
+  <meta name="description" content="Porfolio de Pablo Perea Campos · Desarrollador">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Pablo Perea Campos - Porfolio">
+  <meta name="apple-mobile-web-app-title" content="Mi Porfolio">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
+
+  <meta property="og:title" content="Mi Porfolio">
+  <meta property="og:description" content="Porfolio de Pablo Perea Campos · Desarrollador">
+  <meta property="og:image" content="assets/images/preview.png">
+  <meta property="og:url" content="https://ppereac.netlify.app">
+  <meta property="og:type" content="website">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.ico"/>
 
-  <title>Pablo Perea Campos - Porfolio</title>
+  <title>Mi Porfolio</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
